done: done create and refactoring HomePage

--- a/infosys-project/index.html
+++ b/infosys-project/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png"
+    href="https://images.glints.com/unsafe/glints-dashboard.s3.amazonaws.com/company-logo/289bd317d11e757a504499e95ba66293.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Infosys Test</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
